--- a/app/views/meditations/embed.html.slim
+++ b/app/views/meditations/embed.html.slim
@@ -1,9 +1,7 @@
-body
-    h1 Markup examples
+// HTML tags are written with a simpler indentation based syntax
+section.visual
+  img src="https://picsum.photos/200/300"
+  video autoplay=true muted=true controls="false" src=""
 
-    #content
-      p This example shows you what a basic Slim file looks like.
-
-      audio controls=true autoplay=true loop=true muted=true
-        source src=@meditation
-  
+  audio controls=true autoplay=true loop=true muted=true
+    source src=@meditation
