--- a/app/views/meditations/embed.html.slim
+++ b/app/views/meditations/embed.html.slim
@@ -5,17 +5,11 @@ javascript:
      // alert(document.getElementById('med_audio').currentTime)
       // }
 
-
-
-
 section.visual
-  img src="https://picsum.photos/200/300"
-  / img src=@meditation
-  video autoplay=true muted=true controls="false" src=""
+  img id="med_img" src="https://picsum.photos/200/300"
+  // img src=@meditation
+  video id="med_video" autoplay=true muted=true controls="false" src=""
 
+div id="audio_timeline"
   audio id="med_audio" controls=true autoplay=true loop=true muted=true
-    source src=@testAudio
-
-h3 
-  | Some text
-  = link_to 'Some link', @post
+    source src=@meditation_audio
