--- a/app/views/meditations/embed.html.slim
+++ b/app/views/meditations/embed.html.slim
@@ -4,14 +4,16 @@ javascript:
 
 section.visual
   div id="frames" data=@frames
-  -  for item in @frames
-      img id="med_img" src=item
+    img id="med_img" 
+
+  //-  for item in @frames
+  //    img id="med_img" src=item
   // img id="med_img" src="https://picsum.photos/200/300"
   // img src=@meditation
   video id="med_video" autoplay=true muted=true controls="false" src=""
 
 div id="audio_timeline"
-  audio id="med_audio" controls=true autoplay=true loop=true muted=true
+  audio id="med_audio" controls=true autoplay=true loop=true muted=false
     source src=@meditation_audio
 
 / div id="frames"
