--- a/app/views/meditations/embed.html.slim
+++ b/app/views/meditations/embed.html.slim
@@ -10,7 +10,7 @@ section.visual
   //    img id="med_img" src=item
   // img id="med_img" src="https://picsum.photos/200/300"
   // img src=@meditation
-  video id="med_video" autoplay=true muted=true controls="false" src=""
+  // video id="med_video" autoplay=true muted=true controls="false" src=""
 
 div id="audio_timeline"
   audio id="med_audio" controls=true autoplay=true loop=true muted=false
