--- a/app/views/meditations/embed.html.slim
+++ b/app/views/meditations/embed.html.slim
@@ -17,6 +17,6 @@ div id="audio_timeline"
   audio id="med_audio" controls=true autoplay=true loop=true muted=false
     source src=@meditation_audio
 
-div id="frames"
-  -  for item in @frames
-      img id="med_img" src=item
+//div id="frames"
+//  -  for item in @frames
+//      img id="med_img" src=item
