--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,7 @@
  */
 #med_img {
   max-width: 100%;
+  max-height: 88vh;
 }
 
 #med_audio {
@@ -24,6 +25,7 @@
 
 #med_video{
   margin: 0 auto;
+  max-height: 88vh;
 }
 
 
