--- a/app/assets/stylesheets/embed/media.sass
+++ b/app/assets/stylesheets/embed/media.sass
@@ -161,7 +161,7 @@ body
   &__marker
     position: absolute
     left: calc(50% - 4px)
-    bottom: -4px
+    top: -4px
     width: 8px
     height: 8px
     box-sizing: border-box
@@ -169,6 +169,8 @@ body
     border: 1px solid white
     border-radius: 100%
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1)
+    opacity: 0
+    transition: opacity 0.5s
 
   &__time
     position: absolute
