--- a/app/assets/stylesheets/embed/media.sass
+++ b/app/assets/stylesheets/embed/media.sass
@@ -4,6 +4,15 @@ $color-light: #C5E0DC
 $color-gray: #535353
 $color-faded: #757575
 
+@mixin portrait
+  @media only screen and (orientation: portrait)
+    @content
+
+@mixin landscape
+  @media only screen and (orientation: landscape)
+    @content
+
+
 body
   margin: 0
 
@@ -11,25 +20,32 @@ body
   box-sizing: border-box
 
 .sym-container
-  width: 375px
-  height: 667px
-  max-width: 100%
-  max-height: 100%
-  margin: auto
+  width: 100vw
+  height: 100vh
+  margin: 50px auto
   position: relative
 
-  border: 1px solid lightgray
+  outline: 1px solid lightgray
 
   display: flex
   flex-direction: column
   justify-content: space-between
 
-  background: linear-gradient(180deg, white 25%, transparentize($color-light, 0.1) 52.08%, white 75%)
   //background: radial-gradient(circle closest-side at 50% 52%, transparentize($color-light, 0.1) 52.08%, white 200%)
   //background: radial-gradient(circle 180px at 50% 52%, transparentize($color-light, 0.1) 52.08%, white 200%)
 
   color: $color-gray
   font-family: "Raleway", sans-serif
+
+  @include portrait
+    max-width: 500px
+    max-height: 900px
+    background: linear-gradient(180deg, white 25%, transparentize($color-light, 0.1) 52.08%, white 75%)
+
+  @include landscape
+    max-width: 900px
+    max-height: 500px
+    background: linear-gradient(90deg, white 25%, transparentize($color-light, 0.1) 52.08%, white 75%)
 
 
 // ===== HEADER ===== //
@@ -48,18 +64,23 @@ body
     padding: 10px
 
   &__title
-    position: absolute
-    top: 26px
-    left: 50%
-    transform: translateX(-50%)
 
     flex-grow: 1
-    text-align: center
     color: $color-faded
 
     font-size: 14px
     line-height: 30px
     letter-spacing: 0.3em
+
+    @include portrait
+      position: absolute
+      top: 26px
+      left: 50%
+      transform: translateX(-50%)
+      text-align: center
+
+    @include landscape
+      padding: 4px 16px
 
   &__founder
     display: flex
@@ -85,8 +106,6 @@ body
 
 // ===== MEDIA ===== //
 .sym-media
-  width: 300px
-  max-width: 100%
   aspect-ratio: 1
   border-radius: 100%
 
@@ -96,10 +115,20 @@ body
   outline: 3px solid transparentize(white, 0.6)
 
   position: absolute
-  left: 50%
-  top: 45%
   transform: translateX(-50%) translateY(-50%)  
   display: flex
+
+  @include portrait
+    width: 80%
+    max-width: 100%
+    left: 50%
+    top: 45%
+
+  @include landscape
+    height: 80%
+    max-height: 100%
+    left: 50%
+    top: 48%
 
   &__track
     position: absolute
@@ -125,7 +154,7 @@ body
     top: 50%
     left: 50%
     transform: translateX(-50%) translateY(-50%)
-    clip-path: circle(147.5px at center)
+    clip-path: circle(calc(50% - 2.5px) at center)
 
     display: flex
     align-items: center
@@ -150,7 +179,7 @@ body
       opacity: 1
 
   &__leaf
-    $height: 18px
+    $height: 6%
     $width: $height * 6/14
     position: absolute
     left: calc(50% - #{$width / 2})
@@ -174,22 +203,36 @@ body
 
   &__time
     position: absolute
-    bottom: -32px
-    width: 100%
     font-size: 12px
     line-height: 14px
+    bottom: -32px
+    width: 100%
     text-align: center
+
+    @include landscape
+      top: calc(104%)
+      
 
 
 // ===== FOOTER ===== //
 .sym-footer
-  position: absolute
-  top: 100%
-  width: 100%
-
   margin-top: 12px
-  padding: 50px 0
-  text-align: center
+  display: flex
+  flex-direction: column
+
+  @include portrait
+    padding: 50px 24px
+    position: absolute
+    top: 100%
+    width: 100%
+    text-align: center
+
+  @include landscape
+    padding: 22px 24px
+    position: absolute
+    right: 0
+    bottom: 0
+    text-align: right
 
   &__title
     font-weight: 600
@@ -208,11 +251,15 @@ body
     gap: 20px
     margin-top: 28px
 
+    @include landscape
+      justify-content: flex-end
+      margin-bottom: 22px
+      order: -1
+
 
 // AUDIO TEST
 audio
   position: absolute
   left: 50%
-  bottom: -10%
+  bottom: -70px
   transform: translateX(-50%)
-  
