--- a/app/assets/stylesheets/embed/media.sass
+++ b/app/assets/stylesheets/embed/media.sass
@@ -22,7 +22,7 @@ body
 .sym-container
   width: 100vw
   height: 100vh
-  margin: 50px auto
+  margin: auto
   position: relative
 
   outline: 1px solid lightgray
@@ -45,7 +45,7 @@ body
   @include landscape
     max-width: 900px
     max-height: 500px
-    background: linear-gradient(90deg, white 25%, transparentize($color-light, 0.1) 52.08%, white 75%)
+    background: linear-gradient(90deg, white 30%, transparentize($color-light, 0.1) 57.08%, white 80%)
 
 
 // ===== HEADER ===== //
@@ -127,7 +127,7 @@ body
   @include landscape
     height: 80%
     max-height: 100%
-    left: 50%
+    left: 55%
     top: 48%
 
   &__track
@@ -221,18 +221,14 @@ body
   flex-direction: column
 
   @include portrait
-    padding: 50px 24px
     position: absolute
-    top: 100%
+    bottom: 10%
     width: 100%
     text-align: center
 
   @include landscape
     padding: 22px 24px
-    position: absolute
-    right: 0
-    bottom: 0
-    text-align: right
+    text-align: left
 
   &__title
     font-weight: 600
@@ -251,10 +247,13 @@ body
     gap: 20px
     margin-top: 28px
 
+    img
+      height: 100%
+
     @include landscape
-      justify-content: flex-end
-      margin-bottom: 22px
-      order: -1
+      position: absolute
+      right: 24px
+      bottom: 22px
 
 
 // AUDIO TEST
