--- a/app/assets/stylesheets/embed/media.sass
+++ b/app/assets/stylesheets/embed/media.sass
@@ -46,6 +46,7 @@ body
     max-width: 900px
     max-height: 500px
     background: linear-gradient(90deg, white 30%, transparentize($color-light, 0.1) 57.08%, white 80%)
+    //background: radial-gradient(circle 180px at 55% 48%, transparentize($color-light, 0.1) 52.08%, white 200%)
 
 
 // ===== HEADER ===== //
