--- a/app/assets/stylesheets/embed/media.sass
+++ b/app/assets/stylesheets/embed/media.sass
@@ -12,6 +12,34 @@ $color-faded: #757575
   @media only screen and (orientation: landscape)
     @content
 
+@mixin hidden-while($state, $delay: 0s)
+  opacity: 1 !important
+  transition: opacity 1s ease-in
+  transition-delay: $delay
+
+  #sym-container[data-state="#{$state}"] &
+    opacity: 0 !important
+
+@mixin visible-while($state, $delay: 0s)
+  opacity: 0 !important
+  transition: opacity 1s ease-in
+  transition-delay: $delay
+
+  #sym-container[data-state=#{$state}] &
+    opacity: 1 !important
+
+@keyframes hidden
+  0%
+    opacity: 0
+  100%
+    opacity: 0
+
+@keyframes fadein
+  0%
+    opacity: 0
+  100%
+    opacity: 1
+
 
 body
   margin: 0
@@ -19,7 +47,7 @@ body
 *
   box-sizing: border-box
 
-.sym-container
+#sym-container
   width: 100vw
   height: 100vh
   margin: auto
@@ -48,218 +76,272 @@ body
     background: linear-gradient(90deg, white 30%, transparentize($color-light, 0.1) 57.08%, white 80%)
     //background: radial-gradient(circle 180px at 55% 48%, transparentize($color-light, 0.1) 52.08%, white 200%)
 
+#sym-container
+  // ===== INTRO ===== //
+  .sym-intro
+    position: absolute
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+    z-index: 100
+    background: white
+    text-align: center
 
-// ===== HEADER ===== //
-.sym-header
-  display: flex
-  align-items: flex-start
-  justify-content: space-between
-  padding: 22px 24px
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    gap: 24px
+    padding-bottom: 15%
 
-  &__back
-    width: 37px
-    height: 37px
+    &__lotus
+      opacity: 0.5
+
+    &__steps
+      display: flex
+      flex-direction: column
+      justify-content: center
+      align-items: center
+      gap: 14px
+
+      > a
+        font-weight: 500
+        text-decoration: none
+        color: $color-deep
+
+      @for $i from 1 to 4
+        > *:nth-child(#{$i})
+          animation: hidden #{2 * $i}s, fadein 2s ease-in-out #{2 * $i}s
+
+
+  // ===== HEADER ===== //
+  .sym-header
+    display: flex
+    align-items: flex-start
+    justify-content: space-between
+    padding: 22px 24px
+
+    &__back
+      width: 37px
+      height: 37px
+      border-radius: 100%
+      box-sizing: border-box
+      background: transparentize(#a3a3a3, 0.9)
+      padding: 10px
+
+    &__title
+      flex-grow: 1
+      color: $color-faded
+
+      font-size: 14px
+      line-height: 30px
+      letter-spacing: 0.3em
+
+      @include portrait
+        position: absolute
+        top: 26px
+        left: 50%
+        transform: translateX(-50%)
+        text-align: center
+
+      @include landscape
+        padding: 4px 16px
+
+    &__founder
+      display: flex
+      align-items: flex-end
+      flex-direction: column
+      max-width: 86px
+      text-align: right
+      font-size: 10px
+      line-height: 12px
+      letter-spacing: 0.02em
+
+      img
+        width: 57px
+        height: 57px
+        border-radius: 100%
+        margin-bottom: 4px
+        mask-image: linear-gradient(to bottom, black 70%, transparent)
+
+      strong
+        font-weight: 500
+        margin-bottom: 2px
+
+
+  // ===== MEDIA ===== //
+  .sym-media
+    aspect-ratio: 1
     border-radius: 100%
+
+    background: #FFFFFF
     box-sizing: border-box
-    background: transparentize(#a3a3a3, 0.9)
-    padding: 10px
+    border: 1px solid black
+    outline: 3px solid transparentize(white, 0.6)
 
-  &__title
+    position: absolute
+    transform: translateX(-50%) translateY(-50%)  
+    display: flex
 
-    flex-grow: 1
-    color: $color-faded
+    @include portrait
+      width: 80%
+      max-width: 100%
+      left: 50%
+      top: 45%
 
-    font-size: 14px
-    line-height: 30px
-    letter-spacing: 0.3em
+    @include landscape
+      height: 80%
+      max-height: 100%
+      left: 55%
+      top: 48%
+
+    &__track
+      position: absolute
+      top: 50%
+      left: 50%
+      width: calc(100% + 4px)
+      height: calc(100% + 4px)
+      transform: translateX(-50%) translateY(-50%)
+      
+      box-sizing: border-box
+      border-radius: 100%
+      border-image: conic-gradient($color-deep 0deg, transparent 0deg)
+      transition: border-image 0.5s
+
+    &__image
+      position: absolute
+      height: calc(100% - 2px)
+      width: calc(100% - 2px)
+      top: 50%
+      left: 50%
+      transform: translateX(-50%) translateY(-50%)
+      clip-path: circle(calc(50% - 2.5px) at center)
+
+      display: flex
+      align-items: center
+      justify-content: center
+      background: white
+
+    &__image-stack
+      display: grid
+      position: relative
+
+      img
+        grid-column: 1
+        grid-row: 1
+        height: 90%
+        width: 90%
+        margin: auto
+        object-fit: contain
+        transition: opacity 1s ease-in-out
+        opacity: 0
+
+      img.active
+        opacity: 1
+
+    &__leaf
+      $height: 6%
+      $width: $height * 6/14
+      position: absolute
+      left: calc(50% - #{$width / 2})
+      top: -($height / 2)
+      width: $width
+      height: $height
+
+    &__marker
+      position: absolute
+      left: calc(50% - 4px)
+      top: -4px
+      width: 8px
+      height: 8px
+      box-sizing: border-box
+      background: $color-deep
+      border: 1px solid white
+      border-radius: 100%
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1)
+      opacity: 0
+      transition: opacity 0.5s
+
+    &__time
+      position: absolute
+      font-size: 12px
+      line-height: 14px
+      bottom: -32px
+      width: 100%
+      text-align: center
+
+      @include landscape
+        top: calc(104%)
+        
+
+
+  // ===== FOOTER ===== //
+  .sym-footer
+    margin-top: 12px
+    display: flex
+    flex-direction: column
 
     @include portrait
       position: absolute
-      top: 26px
-      left: 50%
-      transform: translateX(-50%)
+      bottom: 10%
+      width: 100%
       text-align: center
 
     @include landscape
-      padding: 4px 16px
+      padding: 22px 24px
+      text-align: left
 
-  &__founder
-    display: flex
-    align-items: flex-end
-    flex-direction: column
-    max-width: 86px
-    text-align: right
-    font-size: 10px
-    line-height: 12px
-    letter-spacing: 0.02em
+    &__title
+      font-weight: 600
+      font-size: 20px
+      line-height: 23.5px
+      letter-spacing: 0.8px
 
-    img
-      width: 57px
-      height: 57px
-      border-radius: 100%
-      margin-bottom: 4px
-      mask-image: linear-gradient(to bottom, black 70%, transparent)
+    &__subtitle
+      margin-top: 8px
+      font-size: 12px
+      line-height: 14px
 
-    strong
-      font-weight: 500
-      margin-bottom: 2px
+    &__actions
+      display: flex
+      justify-content: center
+      gap: 20px
+      margin-top: 28px
+
+      img
+        height: 100%
+
+      @include landscape
+        position: absolute
+        right: 24px
+        bottom: 22px
 
 
-// ===== MEDIA ===== //
-.sym-media
-  aspect-ratio: 1
-  border-radius: 100%
-
-  background: #FFFFFF
-  box-sizing: border-box
-  border: 1px solid black
-  outline: 3px solid transparentize(white, 0.6)
-
-  position: absolute
-  transform: translateX(-50%) translateY(-50%)  
-  display: flex
-
-  @include portrait
-    width: 80%
-    max-width: 100%
+  // AUDIO TEST
+  audio
+    position: absolute
     left: 50%
-    top: 45%
+    bottom: -70px
+    transform: translateX(-50%)
 
-  @include landscape
-    height: 80%
-    max-height: 100%
-    left: 55%
-    top: 48%
+// ===== VISIBILITY ===== //
+.sym-intro
+  @include visible-while(intro)
 
-  &__track
-    position: absolute
-    top: 50%
-    left: 50%
-    width: calc(100% + 4px)
-    height: calc(100% + 4px)
-    transform: translateX(-50%) translateY(-50%)
-    
-    box-sizing: border-box
-    border-radius: 100%
-    //background: $color-deep
-    //border: 3px solid $color-deep
-    //clip-path: polygon(50% 0%, 100% 0%, 100% 100%, 50% 100%)
-    //background-image: linear-gradient(-90deg, $color-deep 50%, transparent 50%)
-    border-image: conic-gradient($color-deep 0deg, transparent 0deg)
-    transition: border-image 0.5s
-
-  &__image
-    position: absolute
-    height: calc(100% - 2px)
-    width: calc(100% - 2px)
-    top: 50%
-    left: 50%
-    transform: translateX(-50%) translateY(-50%)
-    clip-path: circle(calc(50% - 2.5px) at center)
-
-    display: flex
-    align-items: center
-    justify-content: center
-    background: white
-
-  &__image-stack
-    display: grid
-    position: relative
-
-    img
-      grid-column: 1
-      grid-row: 1
-      height: 90%
-      width: 90%
-      margin: auto
-      object-fit: contain
-      transition: opacity 1s ease-in-out
-      opacity: 0
-
-    img.active
-      opacity: 1
-
-  &__leaf
-    $height: 6%
-    $width: $height * 6/14
-    position: absolute
-    left: calc(50% - #{$width / 2})
-    top: -($height / 2)
-    width: $width
-    height: $height
-
-  &__marker
-    position: absolute
-    left: calc(50% - 4px)
-    top: -4px
-    width: 8px
-    height: 8px
-    box-sizing: border-box
-    background: $color-deep
-    border: 1px solid white
-    border-radius: 100%
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1)
-    opacity: 0
-    transition: opacity 0.5s
-
-  &__time
-    position: absolute
-    font-size: 12px
-    line-height: 14px
-    bottom: -32px
-    width: 100%
-    text-align: center
-
-    @include landscape
-      top: calc(104%)
-      
-
-
-// ===== FOOTER ===== //
+.sym-media,
 .sym-footer
-  margin-top: 12px
-  display: flex
-  flex-direction: column
+  @include hidden-while(intro)
 
-  @include portrait
-    position: absolute
-    bottom: 10%
-    width: 100%
-    text-align: center
+.sym-header__title,
+.sym-media__track,
+.sym-media__marker,
+.sym-media__leaf,
+.sym-media__time,
+.sym-footer__title,
+.sym-footer__subtitle
+  @include hidden-while(playing, 1s)
 
-  @include landscape
-    padding: 22px 24px
-    text-align: left
-
-  &__title
-    font-weight: 600
-    font-size: 20px
-    line-height: 23.5px
-    letter-spacing: 0.8px
-
-  &__subtitle
-    margin-top: 8px
-    font-size: 12px
-    line-height: 14px
-
-  &__actions
-    display: flex
-    justify-content: center
-    gap: 20px
-    margin-top: 28px
-
-    img
-      height: 100%
-
-    @include landscape
-      position: absolute
-      right: 24px
-      bottom: 22px
-
-
-// AUDIO TEST
-audio
-  position: absolute
-  left: 50%
-  bottom: -70px
-  transform: translateX(-50%)
+/*.sym-footer__favourite
+  @include hidden-while(playing, 1s)
+  */
