--- a/app/views/meditations/show.html.slim
+++ b/app/views/meditations/show.html.slim
@@ -1,11 +1,11 @@
 
-#sym-container data-state='intro'
+#sym-container data-state='intro' data-preloading='true'
   .sym-intro
     img.sym-intro__lotus src=image_url('graphics/lotus.svg')
     .sym-intro__steps
       em find a quiet place
       em take a breath
-      a id="sym-begin" href="#playing" begin
+      a.sym-intro__begin id="sym-begin" href="#playing" begin
 
   .sym-header
     .sym-header__back
