Add loading indicator

--- a/app/views/meditations/show.html.slim
+++ b/app/views/meditations/show.html.slim
@@ -12,6 +12,11 @@
       em find a quiet place
       em take a breath
       a.sym-intro__begin id="sym-begin" href="#playing" begin
+    .sym-intro__loader
+      .sym-intro__loading
+      .sym-intro__alert
+        img src=image_url('graphics/alert.svg')
+        span Slow internet connection!
 
   .sym-header
     .sym-header__back
