--- a/app/assets/stylesheets/embed/player.sass
+++ b/app/assets/stylesheets/embed/player.sass
@@ -1,121 +1,6 @@
-
-$color-deep: #1E6C71
-$color-light: #C5E0DC
-$color-gray: #535353
-$color-faded: #757575
-
-@mixin portrait
-  @media only screen and (orientation: portrait)
-    @content
-
-@mixin landscape
-  @media only screen and (orientation: landscape)
-    @content
-
-@mixin hidden-while($state, $speed: 1s, $delay: 0s)
-  opacity: 1 !important
-  transition: opacity $speed ease-in
-  transition-delay: $delay
-
-  #sym-container[data-state="#{$state}"] &
-    opacity: 0 !important
-
-@mixin visible-while($state, $speed: 1s, $delay: 0s)
-  opacity: 0 !important
-  transition: opacity $speed ease-in
-  transition-delay: $delay
-
-  #sym-container[data-state=#{$state}] &
-    opacity: 1 !important
-
-@keyframes hidden
-  0%
-    opacity: 0
-  100%
-    opacity: 0
-
-@keyframes fadein
-  0%
-    opacity: 0
-  100%
-    opacity: 1
-
-
-body
-  margin: 0
-
-*
-  box-sizing: border-box
+@import './_mixins'
 
 #sym-container
-  width: 100vw
-  height: 100vh
-  margin: auto
-  position: relative
-
-  outline: 1px solid lightgray
-
-  display: flex
-  flex-direction: column
-  justify-content: space-between
-
-  //background: radial-gradient(circle closest-side at 50% 52%, transparentize($color-light, 0.1) 52.08%, white 200%)
-  //background: radial-gradient(circle 180px at 50% 52%, transparentize($color-light, 0.1) 52.08%, white 200%)
-
-  color: $color-gray
-  font-family: "Raleway", sans-serif
-
-  @include portrait
-    max-width: 500px
-    max-height: 900px
-    background: linear-gradient(180deg, white 25%, transparentize($color-light, 0.1) 52.08%, white 75%)
-
-  @include landscape
-    max-width: 900px
-    max-height: 500px
-    background: linear-gradient(90deg, white 30%, transparentize($color-light, 0.1) 57.08%, white 80%)
-    //background: radial-gradient(circle 180px at 55% 48%, transparentize($color-light, 0.1) 52.08%, white 200%)
-
-#sym-container
-  // ===== INTRO ===== //
-  .sym-intro
-    position: absolute
-    top: 0
-    left: 0
-    right: 0
-    bottom: 0
-    z-index: 100
-    background: white
-    text-align: center
-
-    display: flex
-    flex-direction: column
-    justify-content: center
-    align-items: center
-    gap: 24px
-    padding-bottom: 10%
-
-    &__lotus
-      opacity: 0.5
-
-    &__steps
-      display: flex
-      flex-direction: column
-      justify-content: center
-      align-items: center
-      gap: 14px
-
-      @for $i from 1 to 4
-        > *:nth-child(#{$i})
-          $delay: 2 * ($i - 1)
-          animation: hidden #{$delay}s, fadein 2s ease-in-out #{$delay}s
-
-    &__begin
-      font-weight: 500
-      text-decoration: none
-      color: $color-deep
-
-
   // ===== HEADER ===== //
   .sym-header
     display: flex
@@ -347,36 +232,3 @@ body
     left: 50%
     bottom: -70px
     transform: translateX(-50%)
-
-// ===== VISIBILITY ===== //
-.sym-intro
-  @include visible-while(intro)
-
-.sym-media,
-.sym-footer
-  @include hidden-while(intro)
-
-.sym-header__title,
-.sym-media__track,
-.sym-media__marker,
-.sym-media__leaf,
-.sym-media__time,
-.sym-footer__title,
-.sym-footer__subtitle
-  @include hidden-while(playing, 0.4s)
-  @include hidden-while(intro, 0.4s)
-
-.sym-media__toggle
-  @include hidden-while(playing, 0.25s, 0.5s)
-
-#sym-container[data-state=playing] .sym-media__play,
-#sym-container[data-state=paused] .sym-media__pause
-  display: none
-
-/*.sym-footer__favourite
-  @include hidden-while(playing, 1s)
-  */
-
-#sym-container[data-preloading=true]
-  .sym-intro__begin
-    opacity: 0 !important
