--- a/app/assets/stylesheets/embed/intro.sass
+++ b/app/assets/stylesheets/embed/intro.sass
@@ -106,7 +106,7 @@
     font-size: 13px
     animation: hidden 14s, pulsein 1.5s ease-in-out 14s
 
-    > img
+    > svg
       height: 1em
       vertical-align: text-top
       display: block
