--- a/app/assets/stylesheets/embed/general.sass
+++ b/app/assets/stylesheets/embed/general.sass
@@ -35,6 +35,10 @@ body
     background: linear-gradient(90deg, white 30%, transparentize($color-light, 0.1) 57.08%, white 80%)
     //background: radial-gradient(circle 180px at 55% 48%, transparentize($color-light, 0.1) 52.08%, white 200%)
 
+  svg, img
+    max-height: 100%
+    max-width: 100%
+
 
 // ===== VISIBILITY ===== //
 .sym-intro
