Fix alert icon sizing

--- a/app/views/meditations/show.html.slim
+++ b/app/views/meditations/show.html.slim
@@ -15,7 +15,7 @@
     .sym-intro__loader
       .sym-intro__loading
       .sym-intro__alert
-        = inline_svg_tag('graphics/alert.svg')
+        = inline_svg_tag('graphics/alert.svg', size: '1.5em')
         span Slow internet connection!
 
   .sym-header
