Add video frames

--- a/app/assets/stylesheets/embed/general.sass
+++ b/app/assets/stylesheets/embed/general.sass
@@ -6,6 +6,10 @@ body
 *
   box-sizing: border-box
 
+// Disable Opera helper buttons
+#detach-button-host
+  display: none
+  
 #sym-container
   width: 100vw
   height: 100vh
