--- a/app/views/meditations/show.html.slim
+++ b/app/views/meditations/show.html.slim
@@ -2,8 +2,8 @@
 - content_for :head do
   link rel='preload' as='audio' href=image_url("prototype/audio/#{@meditation.audio.filename}")
 
-  - @frames.first(@preload_count).each do |frame|
-    link rel='preload' as='image' href=frame[:url]
+  - @meditation.frames.first(@preload_count).each do |frame|
+    link rel='preload' as=(frame.video? ? 'video' : 'image') href=frame.url
 
 #sym-container data-state='intro' data-preloading='true'
   .sym-intro
@@ -30,16 +30,10 @@
 
   .sym-media
     .sym-media__track id='sym-track'
-    .sym-media__image
-      .sym-media__image-stack id='sym-images'
-        - @frames.each_with_index do |frame, index|
-          - if index < @preload_count
-            img id="sym-frame-#{frame[:id]}" data-id=frame[:id] class=('active' if index.zero?) src=frame[:url]
-          - else
-            img id="sym-frame-#{frame[:id]}" data-id=frame[:id] data-src=frame[:url]
-        /- @meditation.keyframes.each_with_index do |keyframe, index|
-          /img class=('active' if index.zero?) src=url_for(keyframe.image) data-seconds=keyframe.seconds
-          img class=('active' if index.zero?) src=image_url("prototype/images/#{keyframe.image.filename}") data-seconds=keyframe.seconds
+    .sym-media__frame
+      .sym-media__frame-stack id='sym-images'
+        - @meditation.frames.each_with_index do |frame, index|
+          = frame.to_html(preload: index < @preload_count, class: ('active' if index.zero?))
     .sym-media__marker id='sym-marker'
     img.sym-media__leaf src=image_url('graphics/leaf.svg')
     .sym-media__time id='sym-time' 0:00
@@ -61,8 +55,5 @@
 
 javascript:
   window.sym = {
-    frames: JSON.parse('#{@frames.to_json.html_safe}'),
     keyframes: JSON.parse('#{@keyframes.to_json.html_safe}'),
   }
-
-  console.log(window.sym)
