--- a/app/views/meditations/show.html.slim
+++ b/app/views/meditations/show.html.slim
@@ -18,6 +18,10 @@
         = inline_svg_tag('graphics/alert.svg', size: '1.5em')
         span Slow internet connection!
 
+  .sym-error
+    = inline_svg_tag('graphics/alert.svg', size: '2em')
+    span Error, please try loading the meditation again.
+
   .sym-header
     .sym-header__back
       = inline_svg_tag('graphics/arrow.svg')
