--- a/app/assets/stylesheets/embed/general.sass
+++ b/app/assets/stylesheets/embed/general.sass
@@ -62,6 +62,8 @@ body
     align-items: center
     gap: 16px
 
+    display: none // Hide until needed
+
     > span
       color: transparentize(darkred, 0.6)
       max-width: 200px
