--- a/app/assets/stylesheets/embed/general.sass
+++ b/app/assets/stylesheets/embed/general.sass
@@ -62,7 +62,7 @@ body
     align-items: center
     gap: 16px
 
-    display: none // Hide until needed
+    display: none // Hide until needed, TODO: Find a better way for this
 
     > span
       color: transparentize(darkred, 0.6)
