Add jpg media for Safari

--- a/app/assets/stylesheets/embed/intro.sass
+++ b/app/assets/stylesheets/embed/intro.sass
@@ -75,7 +75,7 @@
     border-radius: 5px
     background-color: $color-deep
     color: $color-deep
-    animation: dot-flashing 1s infinite linear alternate
+    animation: hidden 3s, dot-flashing 1s infinite linear alternate
 
   &__loading
     position: relative
