--- a/app/views/meditations/show.html.slim
+++ b/app/views/meditations/show.html.slim
@@ -55,7 +55,7 @@
         = inline_svg_tag('graphics/audio.svg')
 
   /audio id='sym-audio' preload='auto' src=url_for(@meditation.audio) controls=true
-  audio id='sym-audio' preload='auto' src=image_url("prototype/audio/#{@meditation.audio.filename}") controls=true
+  audio id='sym-audio' preload='auto' src=image_url("prototype/audio/#{@meditation.audio.filename.base}.mp3") controls=true
 
 javascript:
   window.sym = {
