--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,23 @@
  *= require semantic-ui
  */
 
+nav {
+  position: fixed;
+  z-index: 1;
+  flex: 0 0 auto;
+  height: 101%;
+}
+
+nav > .menu {
+  height: 100%;
+}
+
+main {
+  margin-left: 100px;
+  padding-top: 40px;
+  flex: 1 1 auto;
+}
+
 .ui.card .image > video {
   width: 100%;
   max-height: 257px;
