More adjustments for keyframes

--- a/app/assets/stylesheets/application/editor.sass
+++ b/app/assets/stylesheets/application/editor.sass
@@ -22,7 +22,7 @@
       aspect-ratio: 1
       object-fit: cover
 
-  a.frame[href]:hover
+  a.frame:hover
     background: #EEE
     border-radius: 10px
 
