--- a/app/assets/stylesheets/application/editor.sass
+++ b/app/assets/stylesheets/application/editor.sass
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.2/dist/semantic.min.css")
 
 .editor-preview
   background-image: asset-url("preview.png")
