--- a/app/views/meditations/_meditation.html.slim
+++ b/app/views/meditations/_meditation.html.slim
@@ -7,7 +7,7 @@ tr
       strong = meditation.title
       br
       em = meditation.tag_list
-  td.selectable.collapsing.right.aligned
+  td.collapsing.right.aligned
     - if meditation.published?
       .ui.teal.basic.label
         i.check.icon
