--- a/app/views/meditations/_meditation.html.slim
+++ b/app/views/meditations/_meditation.html.slim
@@ -3,7 +3,7 @@ tr
   td.collapsing
     img.ui.small.rounded.bordered.image src=meditation.thumbnail.url
   td.selectable
-    a href=meditation_path(meditation)
+    a href=meditation_path(meditation.uuid)
       strong = meditation.title
       br
       em = meditation.tag_list
