Add placeholder image

--- a/app/views/meditations/_meditation.html.slim
+++ b/app/views/meditations/_meditation.html.slim
@@ -1,7 +1,7 @@
 
 tr
   td.collapsing
-    img.ui.small.rounded.bordered.image src=meditation.thumbnail.url
+    img.ui.small.rounded.bordered.image src=meditation.thumbnail_url
   td.selectable
     a href=meditation_path(meditation.uuid)
       strong = meditation.title
